--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -4,10 +4,17 @@
     <h3>Admin</h3>
     <p><%= link_to 'User count:', users_path %> <%= User.count %></p>
   <% else %>
-    <h3>You've signed up. Download a free book.</h3>
-    <%= link_to 'Download PDF', products_path('product.pdf'), class: 'btn btn-success btn-large' %>
+    <h3>Download the book.</h3>
+    <%= link_to 'Download PDF', products_path('product.pdf'), :class => 'btn btn-success btn-large' %>
   <% end %>
 <% else %>
-  <h3>Sign up and download a free book.</h3>
-  <%= link_to 'Sign up', new_user_registration_path, class: 'btn btn-primary btn-large' %>
+  <h3>Purchase the book.</h3>
+  <article>
+    <label class="amount">
+      <%= image_tag 'rubyonrails.png', size: '60x60' %>
+      <div><%= ENV['product_title'] %></div>
+      <span><%= number_to_currency(ENV['product_price'].to_f/100) %></span>
+    </label>
+    <%= render :partial => 'purchase' %>
+  </article>
 <% end %>
